--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
     "pdfjs-dist": "^5.4.394",
